--- a/ABC_DEV/INITIATION/HTML/index.html
+++ b/ABC_DEV/INITIATION/HTML/index.html
@@ -195,9 +195,10 @@
     <div id="3" style="background-color: rgba(99, 118, 223, 0.815); font-size:16pt;">
         <h3>Test de la balise span</h3>
         <p>
-            <span style="color: rgb(21, 230, 66);">Test de texte avec la balise &lt;span style=&quot;color: rgb(21, 230, 66);&quot;&gt;&lt;/span&gt;</span>
+            <span style="color: rgb(21, 230, 66);">Test de texte avec la balise &lt;span style=&quot;color: rgb(21, 230,
+                66);&quot;&gt;&lt;/span&gt;</span>
             <br>
-            Retour au texte sans  la balise &lt;span style=&quot;color: cornsilk;&quot;&gt;&lt;/span&gt;
+            Retour au texte sans la balise &lt;span style=&quot;color: cornsilk;&quot;&gt;&lt;/span&gt;
             <br>
             Enfin : test sur les puissances et les exposants :
             <br>
@@ -257,12 +258,20 @@
     <div id="4" style="background-color: rgba(223, 122, 198, 0.815);">
         <h4 style="font-size: 20pt;"><strong>Test de lien</strong></h4>
         <ol>
-            <li>Lien vers un autre site internet : <a title="Site de Mickael" href="https://arfp.devoldere.net/" target="blank">Site de Mickael</a></li>
-            <li>Lien vers une nouvelle page de mon site : <a href="images.html">Lien vers une autre page de mon site</a></li>
+            <li>Lien vers un autre site internet : <a title="Site de Mickael" href="https://arfp.devoldere.net/"
+                    target="blank">Site de Mickael</a></li>
+            <li>Lien vers une nouvelle page de mon site : <a href="images.html">Lien vers une autre page de mon site</a>
+            </li>
             <li>Faire un mail vers abc@def.com : <a href="mailto:abc@def.com">Cliquez ici pour envoyer un mail</a></li>
-            <br>
-            <p>Cliquer sur l'image dessous</p>
-            <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj57NHzx_vnAhUqzIUKHXXVBsUQPAgH"><img style="height: 84px; width: 128px;" src="../IMAGES/google.jpg" title="LIEN VERS GOOGLE"></a>
+            <li><a href="../IMAGES/images_du_site.zip">Telecharger les images du site</a></li>
+            <li>
+                Vous souhaitez voir l'image dans sa taille d'origine ? Cliquez dessus !<br />
+                <a href="../IMAGES/chat.jpg"><img src="../IMAGES/chat_mini.jpg" alt="Photo de chat"
+                        title="Cliquez pour agrandir" /></a>
+            </li>
+            <p>Cliquer sur l'image dessous pour ouvrir Google</p>
+            <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj57NHzx_vnAhUqzIUKHXXVBsUQPAgH" target="blank"><img
+                    style="height: 84px; width: 128px;" src="../IMAGES/google.jpg" title="LIEN VERS GOOGLE"></a>
         </ol>
     </div>
     <div id="5" style="background-color: rgba(236, 11, 11, 0.815);">
