--- a/TP_CRM/INITIATION/HTML/index.html
+++ b/TP_CRM/INITIATION/HTML/index.html
@@ -262,7 +262,7 @@
                     target="blank">Site de Mickael</a></li>
             <li>Lien vers une nouvelle page de mon site : <a href="images.html">Lien vers une autre page de mon site</a>
             </li>
-            <li>Faire un mail vers abc@def.com : <a href="mailto:webmaster@lesite.com?subject=Le sujet&body=Le corps du message">Contacter le webmaster</a></li>
+            <li>Faire un mail vers abc@def.com : <a href="mailto:webmaster@lesite.com?subject=Le%20sujet&body=Le%20corps%20du%20message">Contacter le webmaster</a></li>
             <li><a href="../IMAGES/images_du_site.zip">Telecharger les images du site</a></li>
             <li>
                 Vous souhaitez voir l'image dans sa taille d'origine ? Cliquez dessus !<br />
