Finalisation exo formulaire

--- a/TP_CRM/INITIATION/HTML/index.html
+++ b/TP_CRM/INITIATION/HTML/index.html
@@ -349,7 +349,7 @@
     </div>
     <div id="6" style="background-color: rgba(71, 223, 66, 0.815);">
         <h6>Test de formulaire</h6>
-        <form action="" method="POST">
+        <form action="" method="">
             <p>
                 <label for="surname">Nom de famille</label>
                 <input type="text" name="surname" placeholder="Tapez votre nom" id="surname" />
@@ -418,7 +418,7 @@
             </p>
             <p>
                 <label for="password">Quel est le password ?</label>
-                <input type="password" id="password" name="password" maxlength="4">
+                <input type="password" id="password" name="password" maxlength="4" placeholder="tests">
             </p>
             <p align="center">
                 <p><label for="avis">Avis sur le site</label></p>
