--- a/TP_CRM/TRAINING_00/TABLEAU/index.html
+++ b/TP_CRM/TRAINING_00/TABLEAU/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercice Tableau</title>
+    <style>
+        td,
+        th
+        {
+            border: 1px solid black;
+            height: 50px;
+            width: 90px;
+            text-align: center;
+            font-size: 14pt;
+            margin: 0px;
+        }
+        table th{
+            font-weight: bold;
+            font-size: 20pt;
+        }
+        .police{
+            font-weight: bold;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Exercice Tableau</h1>
-    <img src="" alt="">
+    <img src="tableau.png" alt="image exo">
+    <h2>Application</h2>
+    <table>
+        <th colspan="6">Time Table</th>
+        <tr class="police">
+            <td rowspan="6">Hours</td>
+            <td>Mon</td>
+            <td>Tue</td>
+            <td>Wed</td>
+            <td>Thu</td>
+            <td>Fri</td>
+        </tr>
+        <tr>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Arts</td>
+        </tr>
+        <tr>
+            <td>Social</td>
+            <td>History</td>
+            <td>English</td>
+            <td>Social</td>
+            <td>Sports</td>
+        </tr>
+        <tr>
+            <td class="police" colspan="5">Lunch</td>
+        </tr>
+        <tr>
+            <td>Science</td>
+            <td>Maths</td>
+            <td>Science</td>
+            <td>Maths</td>
+            <td rowspan="2">Project</td>
+        </tr>
+        <tr>
+            <td>Social</td>
+            <td>History</td>
+            <td>English</td>
+            <td>Social</td>
+        </tr>
+        <caption>Titre du tableau</caption>
+    </table>
 </body>
+
 </html>
