sauvegarde petite modif

--- a/TP_CRM/TRAINING_00/FORMULAIRE/index.html
+++ b/TP_CRM/TRAINING_00/FORMULAIRE/index.html
@@ -8,7 +8,8 @@
     <style>
         header {
             background-color: chocolate;
-            height: 760px;
+            height: 720px;
+            width: 590px;
         }
 
         label,
@@ -28,6 +29,11 @@
 
         .bouton input {
             background-color: rgb(238, 108, 108);
+        }
+        header img{
+            padding-top: 20px;
+            padding-left: 20px;
+            vertical-align: middle;
         }
     </style>
 </head>
