--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
@@ -4,93 +4,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crete+Round">
+    <title>Travel Agency.</title>
+    <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <!--Header de la page Logo + Menu-->
     <header>
-        <section>
-            <!--Penser a formater en majuscule au debut de chaque mot-->
-            <p class="first_letter_uper">travel agency<span class="orange">.</span></p>
-        </section>
+        <h1>travel Agency<span class="orange-dot">.</span></h1>
         <nav>
-            <!--Penser a formater tout le texte en majuscule-->
             <ul>
-                <li><a href="#accueil">accueil</a></li>
-                <li><a href="./destinations.html">destinations</a></li>
-                <li><a href="#circuits">circuits</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="https://www.youtube.com/watch?v=OW6tH8pKbGU">Destinations</a></li>
+                <li><a href="#circuits">Circuits</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="accueil">
-        <h1>organisez votre</h1>
-        <h2>voyage sur mesure</h2>
-        <a href="organisation_voyage.html">Par ici</a>
-    </section>
-
-    <section class="wrapper">
-        <article>
-            <img src="./img/steps-icon-1.png" alt="Image du stylo">
-            <h3>planifier</h3>
-            <p>Confiez-nous vos rêves d'évasion : en famille ou entre amis, nous trouverons la formule qui comblera vos
-                attentes.</p>
-        </article>
-        <article>
-            <img src="./img/steps-icon-2.png" alt="Image de feuille superposees">
-            <h3>organiser</h3>
-            <p>Bénéficiez de l’expertise de nos spécialistes de chaque destination, ils vous accompagnent dans la
-                réalisation de votre voyage.</p>
-        </article>
-        <article>
-            <img src="./img/steps-icon-3.png" alt="Image de fusee">
-            <h3>voyager</h3>
-            <p>Nous nous chargeons d’assurer votre sécurité et de veiller à votre pleine sérénité tout au long de votre
-                voyage.</p>
-        </article>
-    </section>
-
-    <section class="wrapper" id="circuits">
-        <article>
-            <h3>partez en famille</h3>
-            <p>Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux !</p>
-            <img src="./img/article-image-1.jpg" alt="Image avec un van">
-            <a href="partez_en_famille.html">Plus d'infos</a>
-
-        </article>
-        <article>
-            <h3>envie de s'évader</h3>
-            <p>Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien !</p>
-            <img src="./img/article-image-2.jpg" alt="Image gens sur un rocher">
-            <a href="envie_evasion.html">Plus d'infos</a>
-        </article>
-    </section>
-
-    <section id="contact">
-        <article>
-            <h4>contactez-noous</h4>
-            <p>Chez Travel Agency nous savons que voyager est une aventure humaine mais également un engagement
-                financier important pour vous. C'est pourquoi nous mettons un point d'honneur à prendre en compte
-                chacune de vos attentes pour vous aider dans la préparation de votre séjour, circuit ou voyage sur
-                mesure.</p>
-        </article>
-        <article>
-            <form action="" method="POST">
-                <label for="name">Nom</label>
-                <input type="text" name="name" id="name">
-                <label for="email">Email</label>
-                <input type="email" name="mail" id="email">
-                <input type="submit" value="OK">
-            </form>
-        </article>
-    </section>
+    <main>
+        <section id="accueil">
+            <div class="wrapper">
+                <h2>Organisez votre<br><strong>voyage sur mesure</strong></h2>
+                <a class="orange-button" href="./organisation_voyage.html">Par ici</a>
+            </div>
+        </section>
+        <section id="prestations">
+            <div class="wrapper">
+                <ul>
+                    <li class="wraper-list">
+                        <img src="./img/steps-icon-1.png" alt="Image stylo">
+                        <h3>Planifier</h3>
+                        <p>
+                            Confiez-nous vos rêves d'évasion en famille ou entre amis, nous trouverons la formule qui
+                            comblera vos attentes.
+                        </p>
+                    </li>
+                    <li class="wraper-list">
+                        <img src="./img/steps-icon-2.png" alt="Image dossiers">
+                        <h3>Organiser</h3>
+                        <p>
+                            Bénéficier de l'expertise de nos spécialistes de chaque destination, ils vous accomapgnent
+                            dans
+                            la réalisation de votre voyage.
+                        </p>
+                    </li>
+                    <li class="wraper-list">
+                        <img src="./img/steps-icon-3.png" alt="Image fusée">
+                        <h3>Voyager</h3>
+                        <p>
+                            Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au
+                            long
+                            de votre voyage.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section id="circuits">
+            <div>
+                <article id="partez-en-famille">
+                    <div class="wrapper">
+                        <h3>Partez en famille</h3>
+                        <hr>
+                        <p>
+                            Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux !
+                        </p>
+                        <a class="orange-button" href="./partez_en_famille.html">Plus d'infos</a>
+                    </div>
+                </article>
+                <article id="envie-evasion">
+                    <div>
+                        <h3>Envie de s'évader</h3>
+                        <hr>
+                        <p>
+                            Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien !
+                        </p>
+                        <a class="orange-button" href="./envie_evasion.html">Plus d'infos</a>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <section id="contacts">
+            <div class="wrapper">
+                <h3 id="contact">Contactez-nous</h3>
+                <p>
+                    Chez Travel Agency nous savons que voyager est une aventure humaine mais également un engagement
+                    financier important pour vous. C'est pourquoi nous mettons un point d'honneur à prendre en compte
+                    chacune de vos attentes pour vous aider dans la préparation de votre séjour, circuit ou voyage sur
+                    mesure.
+                </p>
+                <form action="#" method="POST">
+                    <label for="name">Nom</label>
+                    <input type="text" id="name" placeholder="Votre nom">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Votre email">
+                    <input class="blue-button" type="submit" value="OK">
+                </form>
+            </div>
+        </section>
+    </main>
     <footer>
-        <p>travel agency<span>.</span></p>
-        <p>Copyright &copy Tous droits réservés.</p>
+        <h1>travel Agency<span class="orange-dot">.</span></h1>
+        <p>Copyright &copy; Kyweez. Tous droits réservés.</p>
     </footer>
 </body>
 
