Push fin de journee 11/03/20

--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-
+    <!--Section accueil-->
     <section id="accueil">
         <h1>organisez votre</h1>
         <h2>voyage sur mesure</h2>
