Sauvegarde avant dodo

--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
@@ -14,10 +14,10 @@
         <h1>travel Agency<span class="orange-dot">.</span></h1>
         <nav>
             <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="https://www.youtube.com/watch?v=OW6tH8pKbGU">Destinations</a></li>
-                <li><a href="#circuits">Circuits</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+                <li><a class="menu" href="#accueil">Accueil</a></li>
+                <li><a class="menu" href="https://www.youtube.com/watch?v=OW6tH8pKbGU">Destinations</a></li>
+                <li><a class="menu" href="#circuits">Circuits</a></li>
+                <li><a class="menu" href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -30,34 +30,32 @@
         </section>
         <section id="prestations">
             <div class="wrapper">
-                <ul>
-                    <li class="wraper-list">
-                        <img src="./img/steps-icon-1.png" alt="Image stylo">
-                        <h3>Planifier</h3>
-                        <p>
-                            Confiez-nous vos rêves d'évasion en famille ou entre amis, nous trouverons la formule qui
-                            comblera vos attentes.
-                        </p>
-                    </li>
-                    <li class="wraper-list">
-                        <img src="./img/steps-icon-2.png" alt="Image dossiers">
-                        <h3>Organiser</h3>
-                        <p>
-                            Bénéficier de l'expertise de nos spécialistes de chaque destination, ils vous accomapgnent
-                            dans
-                            la réalisation de votre voyage.
-                        </p>
-                    </li>
-                    <li class="wraper-list">
-                        <img src="./img/steps-icon-3.png" alt="Image fusée">
-                        <h3>Voyager</h3>
-                        <p>
-                            Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au
-                            long
-                            de votre voyage.
-                        </p>
-                    </li>
-                </ul>
+                <article>
+                    <img src="./img/steps-icon-1.png" alt="Image stylo">
+                    <h3>Planifier</h3>
+                    <p>
+                        Confiez-nous vos rêves d'évasion en famille ou entre amis, nous trouverons la formule qui
+                        comblera vos attentes.
+                    </p>
+                </article>
+                <article>
+                    <img src="./img/steps-icon-2.png" alt="Image dossiers">
+                    <h3>Organiser</h3>
+                    <p>
+                        Bénéficier de l'expertise de nos spécialistes de chaque destination, ils vous accomapgnent
+                        dans
+                        la réalisation de votre voyage.
+                    </p>
+                </article>
+                <article>
+                    <img src="./img/steps-icon-3.png" alt="Image fusée">
+                    <h3>Voyager</h3>
+                    <p>
+                        Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au
+                        long
+                        de votre voyage.
+                    </p>
+                </article>
             </div>
         </section>
         <section id="circuits">
