Finitions premiere partie de la page

--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
@@ -30,32 +30,34 @@
         </section>
         <section id="prestations">
             <div class="wrapper">
-                <article>
-                    <img src="./img/steps-icon-1.png" alt="Image stylo">
-                    <h3>Planifier</h3>
-                    <p>
-                        Confiez-nous vos rêves d'évasion en famille ou entre amis, nous trouverons la formule qui
-                        comblera vos attentes.
-                    </p>
-                </article>
-                <article>
-                    <img src="./img/steps-icon-2.png" alt="Image dossiers">
-                    <h3>Organiser</h3>
-                    <p>
-                        Bénéficier de l'expertise de nos spécialistes de chaque destination, ils vous accomapgnent
-                        dans
-                        la réalisation de votre voyage.
-                    </p>
-                </article>
-                <article>
-                    <img src="./img/steps-icon-3.png" alt="Image fusée">
-                    <h3>Voyager</h3>
-                    <p>
-                        Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au
-                        long
-                        de votre voyage.
-                    </p>
-                </article>
+                <ul>
+                    <li class="wraper-list">
+                        <img src="./img/steps-icon-1.png" alt="Image stylo">
+                        <h3>Planifier</h3>
+                        <p>
+                            Confiez-nous vos rêves d'évasion en famille ou entre amis, nous trouverons la formule qui
+                            comblera vos attentes.
+                        </p>
+                    </li>
+                    <li class="wraper-list">
+                        <img src="./img/steps-icon-2.png" alt="Image dossiers">
+                        <h3>Organiser</h3>
+                        <p>
+                            Bénéficier de l'expertise de nos spécialistes de chaque destination, ils vous accomapgnent
+                            dans
+                            la réalisation de votre voyage.
+                        </p>
+                    </li>
+                    <li class="wraper-list">
+                        <img src="./img/steps-icon-3.png" alt="Image fusée">
+                        <h3>Voyager</h3>
+                        <p>
+                            Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au
+                            long
+                            de votre voyage.
+                        </p>
+                    </li>
+                </ul>
             </div>
         </section>
         <section id="circuits">
