--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE copy/index.html
@@ -103,8 +103,7 @@
     </main>
     <footer>
         <h1>travel Agency<span class="orange-dot">.</span></h1>
-        <p>Copyright &copy; Kyweez. Tous droits réservés.</p>
+        <p>Copyright &copy; Kyweez - Tous droits réservés.</p>
     </footer>
 </body>
-
 </html>
