Push avant dodo

--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
@@ -14,10 +14,10 @@
         <h1>travel Agency<span class="orange-dot">.</span></h1>
         <nav>
             <ul>
-                <li><a class="menu" href="#accueil">Accueil</a></li>
-                <li><a class="menu" href="https://www.youtube.com/watch?v=OW6tH8pKbGU">Destinations</a></li>
-                <li><a class="menu" href="#circuits">Circuits</a></li>
-                <li><a class="menu" href="#contacts">Contacts</a></li>
+                <li><button class="menu"><a href="#accueil">Accueil</a></button></li>
+                <li><button class="menu"><a href="https://www.youtube.com/watch?v=OW6tH8pKbGU">Destinations</a></button></li>
+                <li><button class="menu"><a href="#circuits">Circuits</a></button></li>
+                <li><button class="menu"><a href="#contacts">Contacts</a></button></li>
             </ul>
         </nav>
     </header>
