Push avant dodo

--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
@@ -30,34 +30,32 @@
         </section>
         <section id="prestations">
             <div class="wrapper">
-                <ul>
-                    <li class="wraper-list">
-                        <img src="./img/steps-icon-1.png" alt="Image stylo">
-                        <h3>Planifier</h3>
-                        <p>
-                            Confiez-nous vos rêves d'évasion en famille ou entre amis, nous trouverons la formule qui
-                            comblera vos attentes.
-                        </p>
-                    </li>
-                    <li class="wraper-list">
-                        <img src="./img/steps-icon-2.png" alt="Image dossiers">
-                        <h3>Organiser</h3>
-                        <p>
-                            Bénéficier de l'expertise de nos spécialistes de chaque destination, ils vous accomapgnent
-                            dans
-                            la réalisation de votre voyage.
-                        </p>
-                    </li>
-                    <li class="wraper-list">
-                        <img src="./img/steps-icon-3.png" alt="Image fusée">
-                        <h3>Voyager</h3>
-                        <p>
-                            Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au
-                            long
-                            de votre voyage.
-                        </p>
-                    </li>
-                </ul>
+                <article id="planifier">
+                    <img src="./img/steps-icon-1.png" alt="Image stylo">
+                    <h3>Planifier</h3>
+                    <p>
+                        Confiez-nous vos rêves d'évasion en famille ou entre amis, nous trouverons la formule qui
+                        comblera vos attentes.
+                    </p>
+                </article>
+                <article id="organiser">
+                    <img src="./img/steps-icon-2.png" alt="Image dossiers">
+                    <h3>Organiser</h3>
+                    <p>
+                        Bénéficier de l'expertise de nos spécialistes de chaque destination, ils vous accomapgnent
+                        dans
+                        la réalisation de votre voyage.
+                    </p>
+                </article>
+                <article id="voyager">
+                    <img src="./img/steps-icon-3.png" alt="Image fusée">
+                    <h3>Voyager</h3>
+                    <p>
+                        Nous nous chargeons d'assurer votre sécurité et de veiller à votre pleine sérénité tout au
+                        long
+                        de votre voyage.
+                    </p>
+                </article>
             </div>
         </section>
         <section id="circuits">
@@ -66,7 +64,7 @@
                     <div>
                         <h3>Partez en famille</h3>
                         <p>
-                            Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux !
+                            Offrez le meilleur à ceux que vous aimez et partagez des moments fabuleux&nbsp;!
                         </p>
                         <a class="orange-button" href="./partez_en_famille.html">Plus d'infos</a>
                     </div>
@@ -75,7 +73,7 @@
                     <div>
                         <h3>Envie de s'évader</h3>
                         <p>
-                            Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien !
+                            Parfois un peu d'évasion serait le bienvenue et ferait le plus grand bien&nbsp;!
                         </p>
                         <a class="orange-button" href="./envie_evasion.html">Plus d'infos</a>
                     </div>
