--- a/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
+++ b/TP_CRM/TRAINING_02_AGENCE_VOYAGE/index.html
@@ -89,13 +89,15 @@
                     chacune de vos attentes pour vous aider dans la préparation de votre séjour, circuit ou voyage sur
                     mesure.
                 </p>
-                <form action="#" method="POST">
-                    <label for="name">Nom</label>
-                    <input type="text" id="name" placeholder="Votre nom">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Votre email">
-                    <input class="blue-button" type="submit" value="OK">
-                </form>
+                <div id="formulaire">
+                    <form action="#" method="POST">
+                        <label for="name">Nom</label>
+                        <input type="text" id="name" placeholder="Votre nom">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" placeholder="Votre email">
+                        <input class="blue-button" type="submit" value="OK">
+                    </form>
+                </div>
             </div>
         </section>
     </main>
